# IM-TT

./: .gitignore  LICENSE  README.md  schema.sql
backend/: .env.example  Cargo.toml
backend/src/: app_state.rs  main.rs
backend/src/db/: mod.rs  mysql.rs  redis_client.rs
backend/src/entity/: group_members.rs  groups.rs  messages.rs  mod.rs  users.rs
backend/src/handlers/: auth.rs  group.rs  group_old.rs  message.rs  mod.rs
backend/src/models/: group.rs  message.rs  mod.rs  user.rs
backend/src/utils/: jwt.rs  mod.rs  password.rs
backend/src/websocket/: handler.rs
frontend/: .env.example  package.json
frontend/src/: App.css  App.tsx  index.html  main.js  styles.css
frontend/src-tauri/: tauri.conf.json
frontend/src/pages/: Chat.css  Chat.tsx  Login.css  Login.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: index.ts
