[package]
name = "im-tt-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.68", features = ["websocket", "cors", "affix"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
redis = { version = "0.24", features = ["tokio-comp"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dotenv = "0.15"
futures-util = "0.3"
